--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="text_black">#353434</color>
+    <color name="icon_tint">#9e9e9e</color>
 </resources>
