--- a/app/src/main/res/layout/item_categories.xml
+++ b/app/src/main/res/layout/item_categories.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_card_view"
-    android:layout_width="200dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="3dp"
+    android:layout_margin="10dp"
     android:elevation="5dp"
     app:cardBackgroundColor="@android:color/white"
     app:cardCornerRadius="5dp">
@@ -23,7 +23,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@drawable/placeholder1" />
+            android:src="@drawable/placeholder1" />
 
         <TextView
             android:id="@+id/tv_category_name"
