--- a/app/src/main/res/layout/item_dresses.xml
+++ b/app/src/main/res/layout/item_dresses.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:elevation="5dp"
+    app:elevation="5dp"
     app:cardBackgroundColor="@android:color/white"
     app:cardCornerRadius="5dp">
 
@@ -55,6 +55,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_dress_name"
             tools:text="UGX 30,000 " />
 
+<!--        change delete to add to cart button -->
         <ImageView
             android:id="@+id/iv_delete"
             android:layout_width="22dp"
